@@ -41,6 +41,7 @@
 
       <plugin>
         <artifactId>maven-compiler-plugin</artifactId>
+        <version>2.3.2</version>
         <configuration>
           <source>${compile.version}</source>
           <target>${compile.version}</target>
@@ -83,14 +84,6 @@
           </descriptors>
           <outputDirectory>${distrib.dir}</outputDirectory>
         </configuration>
-        <executions>
-          <execution>
-            <phase>package</phase>
-            <goals>
-              <goal>single</goal>
-            </goals>
-          </execution>
-        </executions>
       </plugin>
 
     </plugins>
@@ -123,19 +116,5 @@
     </dependency>
 
   </dependencies>
-
-  <reporting>
-    <plugins>
-    
-      <plugin>
-        <artifactId>maven-javadoc-plugin</artifactId>
-        <configuration>
-          <outputDirectory>${reports.dir}/apidocs</outputDirectory>
-          <reportOutputDirectory>${reports.dir}/apidocs</reportOutputDirectory>
-        </configuration>
-      </plugin>
-
-    </plugins>
-  </reporting>
 
 </project>
